# ChangeLog for gnome-base/gdm
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gdm/ChangeLog,v 1.3 2002/04/04 15:06:21 seemant Exp $

*gdm-2.2.5.4-r5 (4 Apr 2002)

  4 Apr 2002; Seemant Kulleen <seemant@gentoo.org> files/2.2.5/etc/gdm
  files/2.2.5/etc/gdmconfig :

  Updated the PAM config with RedHat's which uses the more secure pam stack.

*gdm-2.2.5.4-r5 (5 Mar 2002)

  5 Mar 2002; Arcady Genkin <agenkin@thpoon.com> gdm-2.2.5.4-r5.ebuild :
  
  Added --disable-nls if nsl is not in USE (patch submitted by
  seemant@rocketmail.com (Seemant Kulleen)).

*gdm-2.2.5.4-r4 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.