@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gdm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gdm/ChangeLog,v 1.3 2002/04/04 15:06:21 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gdm/ChangeLog,v 1.4 2002/05/28 10:07:14 spider Exp $
+
+*gdm-2.3.90.3 (28 May 2002)
+  28 May  2002; Spider <spider@gentoo.org> gdm-2.3.90.3.ebuild :
+  new gnome2 version this is built with debugging
 
 *gdm-2.2.5.4-r5 (4 Apr 2002)
 
